[gd_scene format=3 uid="uid://clwy3dojqtq0x"]

[ext_resource type="Script" uid="uid://dq0wkpwgqju2i" path="res://Entities/Duck/duck.gd" id="1_jqnw0"]
[ext_resource type="Texture2D" uid="uid://cwqe33iidko81" path="res://Entities/Duck/Sprites/duck1.png" id="1_tje5r"]
[ext_resource type="Texture2D" uid="uid://d14y48k11ud4w" path="res://Entities/Duck/Sprites/duck2.png" id="2_jhdox"]

[sub_resource type="CircleShape2D" id="CircleShape2D_70nd8"]
radius = 7.07107

[sub_resource type="CircleShape2D" id="CircleShape2D_ftidd"]
radius = 7.07107

[sub_resource type="SpriteFrames" id="SpriteFrames_yyand"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_tje5r")
}, {
"duration": 1.0,
"texture": ExtResource("2_jhdox")
}],
"loop": true,
"name": &"default",
"speed": 10.0
}]

[node name="pato" type="CharacterBody2D"]
z_index = -99
position = Vector2(225, 192)
collision_layer = 7
collision_mask = 7
script = ExtResource("1_jqnw0")
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_70nd8")

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[node name="Timer_die" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="Area2D_pato" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D_pato"]
shape = SubResource("CircleShape2D_ftidd")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
texture_filter = 3
sprite_frames = SubResource("SpriteFrames_yyand")
autoplay = "default"

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="Timer_die" to="." method="_on_timer_die_timeout"]
[connection signal="area_entered" from="Area2D_pato" to="." method="_on_area_2d_pato_area_entered"]
